# TalentScout-Hiring-Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  candidates.jsonl  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml
src/: __init__.py
src/candidate/: __init__.py
src/constants/: __init__.py
src/conversation/: __init__.py
src/core/: __init__.py
src/from_root/: __init__.py
src/logger/: __init__.py
src/pipeline/: test_pipeline.py
src/ui/: __init__.py
