[build-system]
requires      = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name            = "talentscout-hiring-assistant"
version         = "1.0.0"
description     = "AI-powered hiring assistant chatbot for TalentScout recruitment agency"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Prathamesh Uravane", email = "upratham2002@gmail.com" }
]
keywords = [
  "chatbot",
  "hiring",
  "recruitment",
  "LLM",
  "OpenAI",
  "streamlit",
  "AI",
  "NLP"
]


dependencies = [
  "openai>=1.0.0",
  "streamlit>=1.28.0",
  "python-dotenv>=1.0.0",
  "path>=0.10.0",
  "setuptools>=65.0.0",
  "gradio>=3.0.0",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

